--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "@nguniversal/express-engine": "^7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.6.0",
     "core-js": "^2.5.4",
     "express": "^4.15.2",
-    "rxjs": "~6.3.3",
+    "font-awesome": "^4.7.0",
+    "ng2-adsense": "^9.1.0",
+    "rxjs": "^6.6.3",
+    "rxjs-compat": "^6.6.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
